CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

8 February 2008
+ DBPager
  o Included '.' as an allowed character if someone passes a
    table.column mix.
  o no longer strips tags from empty message
+ Database 
  o changed getTable Columns
    - If the query contains multiple tables, columns from both are
      included. Previously, only the first table was returned. 
    - The column checks are made again if the tables have
      changed. Previously it was assumed they would not change.
  o isTableColumn now separates the table from the column name if a
    table.column combination is sent to it.
+ Updated information in File_Manager doc.


7 February 2008
+ Added File_Manager.txt document
+ Changed Image_Manager document to point to File_Manager.

6 February 2008
+ Trimmed newline from body.js in various javascripts.

5 February 2008
+ DBPager, Text : Now checks UTF8_MODE before matching foreign characters.
+ Key : was using 'itemname' instead of 'item_name' on error
+ XMLParser's constructor has a second parameter to indicate with a
  failed parse should die or just return false.
+ UTF8_MODE define added to config.tpl
+ James Heinrich was added to the CREDITS file
+ Fixed some grammar in DB_Pager.txt

28 January 2008
+ Added shockwave files to media file type
+ Updated: conf/file_types.php

25 January 2008
+ Added doc about ffmpeg and filecabinet
+ Updated media credits

24 January 2008
+ adding slashes to the question in the confirm script
+ Updated: javascript/confirm/default.php

17 January 2008
+ Changed the search and replace method for image directories in fckeditor
+ updated: javascript/editors/fckeditor/default.php

15 January 2008
+ Core: Added option to bookmark function to ignore urls with authkeys
  in them.
+ XMLParser: added a content only parameter to allow script to work
  like previously coded
+ Added em tag to text settings
+ added alternate office mime types to file_types
